Fixed up announcement page
Signed-off-by: Sean Pimentel <sean_pimentel@hotmail.com>

--- a/src/app/modules/public/pages/announcement/announcement.component.html
+++ b/src/app/modules/public/pages/announcement/announcement.component.html
@@ -1,17 +1,18 @@
-<div class="parallax-container valign-wrapper">
+<div class="parallax-container valign-wrapper title-section">
   <div class="parallax">
-    <img src="../../../../assets/images/parallax-1.png">
+    <img src="../../../../../assets/images/landing_page_parallax_1.jpg" alt="landing page parallax">
   </div>
-  <div class="row container">
+  <div class="row container white-text">
     <div class="center">
       <h1>portfol.io</h1>
       <h5>An engineer's space to document their amazing projects!</h5>
-      <a class="btn-pill waves-effect waves-light z-depth-1-half">Register</a>
+      <!--<a class="btn-pill waves-effect waves-light z-depth-1-half">Register</a>-->
+      <h6>Coming soon</h6>
     </div>
-      <a class="signup btn-pill z-depth-1-half" routerLink="/signup">signup</a>
+    <a class="signup btn-small accentBlue" routerLink="/signup">signup</a>
   </div>
 </div>
-<div class="section white parallax-between">
+<div class="section greyGrey white-text parallax-between">
   <div class="row container center">
     <div class="col s12 m4">
       <i class="material-icons large">code</i>
@@ -34,21 +35,21 @@
   </div>
 </div>
 <div class="parallax-container valign-wrapper">
-  <div class="parallax white-tint"><img src="../../../../assets/images/parallax-3.png"></div>
+  <div class="parallax white-tint"><img src="../../../../../assets/images/parallax-3.png"></div>
   <div class="row container center">
     <div class="col l6 offset-l3 m8 offset-m2 s12">
       <h3 class="parallax-content">Make your projects seen</h3>
     </div>
   </div>
 </div>
-<div class="section white parallax-between">
-  <div class="row container center">
-    <h3>Mission Statement:</h3>
-    <h5>It's my personal goal to give all developers and engineers the tools and a platform they need to discuss and
-      publish their amazing, creative projects.</h5>
-  </div>
-</div>
-<footer class="page-footer">
+<!--<div class="section sad white-text parallax-between">-->
+  <!--<div class="row container center">-->
+    <!--<h3>Mission Statement:</h3>-->
+    <!--<h5>It's my personal goal to give all developers and engineers the tools and a platform they need to discuss and-->
+      <!--publish their amazing, creative projects.</h5>-->
+  <!--</div>-->
+<!--</div>-->
+<footer class="page-footer greyGrey">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -66,7 +67,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright">
+  <div class="footer-copyright greyGrey darken-1 white-text">
     <div class="container">
       © 2019 Sincerelysyntax LTC
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
