--- a/src/app/modules/public/components/login-form-animated/login-form-animated.component.html
+++ b/src/app/modules/public/components/login-form-animated/login-form-animated.component.html
@@ -1,1 +1,27 @@
-<div>test</div>
+  <div class="row">
+    <div class="col s10 offset-s1 m6 offset-m3 l4 offset-l4 white" id="login-wrapper">
+      <div class="row">
+        <div class="input-field col s10 offset-s1">
+          <input id="first_name" type="email" class="validate" />
+          <label for="first_name">Email</label>
+        </div>
+        <div class="input-field col s10 offset-s1">
+          <input id="password" type="password" class="validate" />
+          <label for="password">Password</label>
+        </div>
+        <div class="row">
+          <div class="col s5 offset-s1">
+            <button class="btn waves-effect waves-light light-blue" style="margin-top: 8px;">Sign In</button>
+          </div>
+          <div class="col s5">
+            <p class="right">
+              <label>
+                <input type="checkbox" />
+                <span>Remember me?</span>
+              </label>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
