--- a/src/app/modules/public/pages/announcement/announcement.component.html
+++ b/src/app/modules/public/pages/announcement/announcement.component.html
@@ -1,9 +1,9 @@
 <div class="parallax-container valign-wrapper title-section">
   <div class="parallax">
-    <img src="../../../../../assets/images/landing_page_parallax_1.jpg" alt="landing page parallax">
+    <img src="../../../../../assets/images/material_background_2.png" alt="landing page parallax">
   </div>
   <div class="row container white-text">
-    <div class="center">
+    <div class="center black-text">
       <h1>portfol.io</h1>
       <h5>An engineer's space to document their amazing projects!</h5>
       <!--<a class="btn-pill waves-effect waves-light z-depth-1-half">Register</a>-->
