--- a/src/app/modules/public/pages/announcement/announcement.component.html
+++ b/src/app/modules/public/pages/announcement/announcement.component.html
@@ -12,7 +12,7 @@
     <a class="signup btn-small accentBlue" routerLink="/signup">signup</a>
   </div>
 </div>
-<div class="section greyGrey white-text parallax-between">
+<div class="section newAir parallax-between">
   <div class="row container center">
     <div class="col s12 m4">
       <i class="material-icons large">code</i>
@@ -49,28 +49,28 @@
       <!--publish their amazing, creative projects.</h5>-->
   <!--</div>-->
 <!--</div>-->
-<footer class="page-footer greyGrey">
+<footer class="page-footer newAir">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">portfol.io</h5>
-        <p class="grey-text text-lighten-4">Idk lol this is just placeholder text</p>
+        <h5 class="black-text">portfol.io</h5>
+        <p class="black-text">Idk lol this is just placeholder text</p>
       </div>
       <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
+        <h5 class="black-text">Links</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Help</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Public Source</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Contact Me</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+          <li><a class="black-text" href="#!">Help</a></li>
+          <li><a class="black-text" href="#!">Public Source</a></li>
+          <li><a class="black-text" href="#!">Contact Me</a></li>
+          <li><a class="black-text" href="#!">About</a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="footer-copyright greyGrey darken-1 white-text">
-    <div class="container">
+  <div class="footer-copyright">
+    <div class="container black-text">
       © 2019 Sincerelysyntax LTC
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <a class="black-text right" href="#!">More Links</a>
     </div>
   </div>
 </footer>
