--- a/src/app/modules/account/components/account-container/account-container.component.html
+++ b/src/app/modules/account/components/account-container/account-container.component.html
@@ -2,6 +2,17 @@
     <h3 id="user-name" class="center-align" style="width: 100%;">Patrick Pimentel</h3>
 </div>
 <div id="search">
-
+  <div class="container">
+    <div class="row">
+      <div class="input-field col s6">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" placeholder="Portfolio" type="text" class="validate">
+        <label for="icon_prefix">Search Projects</label>
+      </div>
+      <div class="col s6">
+        <div class="chips chips-placeholder"></div>
+      </div>
+    </div>
+  </div>
 </div>
 <router-outlet></router-outlet>
