Got the rework done of isotope
Signed-off-by: Sean Pimentel <sean_pimentel@hotmail.com>

--- a/src/app/modules/account/components/account-container/account-container.component.html
+++ b/src/app/modules/account/components/account-container/account-container.component.html
@@ -1,5 +1,21 @@
 <div id="header" class="valign-wrapper">
-    <h3 id="user-name" class="center-align" style="width: 100%;">Patrick Pimentel</h3>
+  <div class="row">
+    <div class="col s12">
+      <h3 id="user-name" class="center-align my-5" style="width: 100%;">{{user.profile.fname + ' ' + user.profile.lname}}</h3>
+    </div>
+    <div class="col s12">
+      <h6 id="user-bio" class="center-align" style="width: 100%;">{{user.profile.oneLineBio}}</h6>
+    </div>
+    <div class="col s12">
+      <h6 class="center-align my-2" style="width: 100%;"><b>CELL</b> {{user.profile.phoneNumber}} <b>EMAIL</b> {{user.profile.email}}</h6>
+    </div>
+    <div class="col s12">
+      <h6 class="center-align my-2" style="width: 100%;"><b>BLOG</b> {{user.profile.blogUrl}} <b>GITHUB</b> {{user.profile.githubUrl}}</h6>
+    </div>
+    <div class="col s12">
+      <h6 class="center-align my-2" style="width: 100%;"><b>BLOG</b> {{user.profile.linkedInUrl}}</h6>
+    </div>
+  </div>
 </div>
 <div id="search">
   <div class="container">
