--- a/src/app/modules/account/pages/projects-page/projects-page.component.scss
+++ b/src/app/modules/account/pages/projects-page/projects-page.component.scss
@@ -11,3 +11,32 @@
 .card-title {
   font-weight: 700;
 }
+
+// Isotope
+
+.grid {
+  background: #DDD;
+}
+
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .grid-item ---- */
+
+.grid-sizer,
+.grid-item {
+  width: 33.333%;
+}
+
+.grid-item {
+  float: left;
+}
+
+.grid-item img {
+  display: block;
+  max-width: 100%;
+}
