--- a/src/app/modules/public/pages/signup-page/signup-page.component.html
+++ b/src/app/modules/public/pages/signup-page/signup-page.component.html
@@ -1,6 +1,6 @@
 <div id="login-form-wrapper">
   <div id="login-form-holder" [@flyInFormTrigger]="flyInForm ? flyInForm : 'offScreen'">
-    <app-login-form-animated></app-login-form-animated>
+    <pio-login-form-animated></pio-login-form-animated>
   </div>
 </div>
 <ul>
