--- a/src/app/modules/account/components/account-container/account-container.component.html
+++ b/src/app/modules/account/components/account-container/account-container.component.html
@@ -20,15 +20,23 @@
 <div id="search">
   <div class="container">
     <div class="row">
-      <div class="input-field col s6">
-        <i class="material-icons prefix">search</i>
-        <input id="icon_prefix" placeholder="Portfolio" type="text" class="validate">
-        <label for="icon_prefix">Search Projects</label>
+<!--      <div class="input-field col s6">-->
+<!--        <i class="material-icons prefix">search</i>-->
+<!--        <input id="icon_prefix" placeholder="Portfolio" type="text" class="validate">-->
+<!--        <label for="icon_prefix">Search Projects</label>-->
+<!--      </div>-->
+      <div class="col s4 offset-s2">
+        <div class="chips chips-placeholder my-8"></div>
       </div>
+      <div class="divider"></div>
       <div class="col s6">
-        <div class="chips chips-placeholder"></div>
+        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.shuffle()">Shuffle</button>
+        <pio-sort-button text="Name" (clicked)="projectsPageComponent.sortBy('name', $event)"></pio-sort-button>
+        <pio-sort-button text="Date" classes="m-15" (clicked)="projectsPageComponent.sortBy('date', $event)"></pio-sort-button>
+<!--        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.sortBy('name')">Sort Name</button>-->
+<!--        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.sortBy('date')">Sort Date</button>-->
       </div>
     </div>
   </div>
 </div>
-<router-outlet></router-outlet>
+<pio-project-page #projectsPageComponent></pio-project-page>
