almost have button working
Signed-off-by: Sean Pimentel <sean_pimentel@hotmail.com>

--- a/src/app/modules/public/pages/announcement/announcement.component.html
+++ b/src/app/modules/public/pages/announcement/announcement.component.html
@@ -1,76 +1,78 @@
-<div class="parallax-container valign-wrapper title-section">
-  <div class="parallax">
-    <img src="../../../../../assets/images/material_background_2.png" alt="landing page parallax">
-  </div>
-  <div class="row container white-text">
-    <div class="center black-text">
-      <h1>portfol.io</h1>
-      <h5>An engineer's space to document their amazing projects!</h5>
-      <!--<a class="btn-pill waves-effect waves-light z-depth-1-half">Register</a>-->
-      <h6>Coming soon</h6>
+<div id="announcement-page-wrapper">
+  <div class="parallax-container valign-wrapper title-section">
+    <div class="parallax">
+      <img src="../../../../../assets/images/material_background_2.png" alt="landing page parallax">
     </div>
-    <a class="signup btn-small accentBlue" routerLink="/signup">signup</a>
-  </div>
-</div>
-<div class="section newAir parallax-between">
-  <div class="row container center">
-    <div class="col s12 m4">
-      <i class="material-icons large">code</i>
-      <h5>Made by a developer</h5>
-      <h6>This project is made by someone who gets how you think and is just as bad at spelling and social
-        situations as you.</h6>
-    </div>
-    <div class="col s12 m4">
-      <i class="material-icons large">search</i>
-      <h5>Search Portfolios</h5>
-      <h6>Search for people's portfolio projects to learn something new and share your own to inspire others.
-        Through the tag based feature, find public projects from other engineers and be jealous you're not
-        doing as cool projects as they are.</h6>
-    </div>
-    <div class="col s12 m4">
-      <i class="material-icons large">fingerprint</i>
-      <h5>Promote <b>Your</b> Uniqueness</h5>
-      <h6>You are you, nobody is like you, embrace yourself for all that you are.</h6>
+    <div class="row container white-text">
+      <div class="center black-text">
+        <h1>portfol.io</h1>
+        <h5>An engineer's space to document their amazing projects!</h5>
+        <!--<a class="btn-pill waves-effect waves-light z-depth-1-half">Register</a>-->
+        <h6>Coming soon</h6>
+      </div>
+      <a id="special-button" class="signup btn-small" routerLink="/signup" #signupButton (click)="hideButtonText()">signup</a>
     </div>
   </div>
-</div>
-<div class="parallax-container valign-wrapper">
-  <div class="parallax white-tint"><img src="../../../../../assets/images/parallax-3.png"></div>
-  <div class="row container center">
-    <div class="col l6 offset-l3 m8 offset-m2 s12">
-      <h3 class="parallax-content">Make your projects seen</h3>
+  <div class="section newAir parallax-between">
+    <div class="row container center">
+      <div class="col s12 m4">
+        <i class="material-icons large">code</i>
+        <h5>Made by a developer</h5>
+        <h6>This project is made by someone who gets how you think and is just as bad at spelling and social
+          situations as you.</h6>
+      </div>
+      <div class="col s12 m4">
+        <i class="material-icons large">search</i>
+        <h5>Search Portfolios</h5>
+        <h6>Search for people's portfolio projects to learn something new and share your own to inspire others.
+          Through the tag based feature, find public projects from other engineers and be jealous you're not
+          doing as cool projects as they are.</h6>
+      </div>
+      <div class="col s12 m4">
+        <i class="material-icons large">fingerprint</i>
+        <h5>Promote <b>Your</b> Uniqueness</h5>
+        <h6>You are you, nobody is like you, embrace yourself for all that you are.</h6>
+      </div>
     </div>
   </div>
-</div>
-<!--<div class="section sad white-text parallax-between">-->
+  <div class="parallax-container valign-wrapper">
+    <div class="parallax white-tint"><img src="../../../../../assets/images/parallax-3.png"></div>
+    <div class="row container center">
+      <div class="col l6 offset-l3 m8 offset-m2 s12">
+        <h3 class="parallax-content">Make your projects seen</h3>
+      </div>
+    </div>
+  </div>
+  <!--<div class="section sad white-text parallax-between">-->
   <!--<div class="row container center">-->
-    <!--<h3>Mission Statement:</h3>-->
-    <!--<h5>It's my personal goal to give all developers and engineers the tools and a platform they need to discuss and-->
-      <!--publish their amazing, creative projects.</h5>-->
+  <!--<h3>Mission Statement:</h3>-->
+  <!--<h5>It's my personal goal to give all developers and engineers the tools and a platform they need to discuss and-->
+  <!--publish their amazing, creative projects.</h5>-->
   <!--</div>-->
-<!--</div>-->
-<footer class="page-footer newAir">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="black-text">portfol.io</h5>
-        <p class="black-text">Idk lol this is just placeholder text</p>
-      </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="black-text">Links</h5>
-        <ul>
-          <li><a class="black-text" href="#!">Help</a></li>
-          <li><a class="black-text" href="#!">Public Source</a></li>
-          <li><a class="black-text" href="#!">Contact Me</a></li>
-          <li><a class="black-text" href="#!">About</a></li>
-        </ul>
+  <!--</div>-->
+  <footer class="page-footer newAir">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="black-text">portfol.io</h5>
+          <p class="black-text">Idk lol this is just placeholder text</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="black-text">Links</h5>
+          <ul>
+            <li><a class="black-text" href="#!">Help</a></li>
+            <li><a class="black-text" href="#!">Public Source</a></li>
+            <li><a class="black-text" href="#!">Contact Me</a></li>
+            <li><a class="black-text" href="#!">About</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container black-text">
-      © 2019 Sincerelysyntax LTC
-      <a class="black-text right" href="#!">More Links</a>
+    <div class="footer-copyright">
+      <div class="container black-text">
+        © 2019 Sincerelysyntax LTC
+        <a class="black-text right" href="#!">More Links</a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
+</div>
