--- a/src/app/modules/public/pages/announcement/announcement.component.scss
+++ b/src/app/modules/public/pages/announcement/announcement.component.scss
@@ -32,4 +32,14 @@
   position: absolute;
   top: 48px;
   right: 48px;
+  width: 80px;
+  height: 32px;
+}
+
+#special-button {
+  background: $accentBlue;
+  background: -webkit-linear-gradient(top left, $accentBlue 0%, $primaryBlue 100%);
+  background: -moz-linear-gradient(top left, $accentBlue 0%, $primaryBlue 100%);
+  background: -o-linear-gradient(top left, $accentBlue 0%, $primaryBlue 100%);
+  background: linear-gradient(to bottom right, $accentBlue 0%, $primaryBlue 100%);
 }
