Pushing changes for gh-pages. Testing different layouts
Signed-off-by: Sean Pimentel <sean_pimentel@hotmail.com>

--- a/src/app/modules/account/pages/projects-page/projects-page.component.html
+++ b/src/app/modules/account/pages/projects-page/projects-page.component.html
@@ -1,9 +1,4 @@
-<div class="container">
-  <div id="projects-container">
-    <div id="project-grid">
-
-    </div>
-  </div>
+<div class="container mt-30">
   <div id="grid">
     <div class="grid-sizer"></div>
     <div class="grid-item" *ngFor="let item of projects">
