--- a/src/app/modules/public/pages/signup-page/signup-page.component.html
+++ b/src/app/modules/public/pages/signup-page/signup-page.component.html
@@ -4,26 +4,46 @@
       <pio-login-form-animated></pio-login-form-animated>
     </div>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-med-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
+      <li class="hide-on-small-and-down"></li>
       <li></li>
       <li></li>
       <li></li>
