--- a/src/app/modules/account/components/account-container/account-container.component.html
+++ b/src/app/modules/account/components/account-container/account-container.component.html
@@ -7,36 +7,15 @@
       <h6 id="user-bio" class="center-align" style="width: 100%;">{{user.profile.oneLineBio}}</h6>
     </div>
     <div class="col s12">
-      <h6 class="center-align my-2" style="width: 100%;"><b>CELL</b> {{user.profile.phoneNumber}} <b>EMAIL</b> {{user.profile.email}}</h6>
+      <h6 class="center-align my-4" style="width: 100%;"><b>CELL</b> {{user.profile.phoneNumber}} <b>EMAIL</b> {{user.profile.email}}</h6>
     </div>
     <div class="col s12">
-      <h6 class="center-align my-2" style="width: 100%;"><b>BLOG</b> {{user.profile.blogUrl}} <b>GITHUB</b> {{user.profile.githubUrl}}</h6>
+      <h6 class="center-align my-4" style="width: 100%;"><b>BLOG</b> {{user.profile.blogUrl}} <b>GITHUB</b> {{user.profile.githubUrl}}</h6>
     </div>
     <div class="col s12">
-      <h6 class="center-align my-2" style="width: 100%;"><b>BLOG</b> {{user.profile.linkedInUrl}}</h6>
+      <h6 class="center-align my-4" style="width: 100%;"><b>LinkedIn</b> {{user.profile.linkedInUrl}}</h6>
     </div>
   </div>
 </div>
-<div id="search">
-  <div class="container">
-    <div class="row">
-<!--      <div class="input-field col s6">-->
-<!--        <i class="material-icons prefix">search</i>-->
-<!--        <input id="icon_prefix" placeholder="Portfolio" type="text" class="validate">-->
-<!--        <label for="icon_prefix">Search Projects</label>-->
-<!--      </div>-->
-      <div class="col s6 offset-s2">
-        <div class="chips chips-placeholder my-8"></div>
-      </div>
-      <div class="divider"></div>
-      <div class="col s4">
-        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.shuffle()">Shuffle</button>
-        <pio-sort-button text="Name" (clicked)="projectsPageComponent.sortBy('name', $event)"></pio-sort-button>
-        <pio-sort-button text="Date" classes="m-15" (clicked)="projectsPageComponent.sortBy('date', $event)"></pio-sort-button>
-<!--        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.sortBy('name')">Sort Name</button>-->
-<!--        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.sortBy('date')">Sort Date</button>-->
-      </div>
-    </div>
-  </div>
-</div>
-<pio-project-page #projectsPageComponent></pio-project-page>
+<router-outlet></router-outlet>
+
