--- a/src/app/modules/account/pages/projects-page/projects-page.component.html
+++ b/src/app/modules/account/pages/projects-page/projects-page.component.html
@@ -1,3 +1,25 @@
+<div id="search">
+  <div class="container">
+    <div class="row">
+      <!--      <div class="input-field col s6">-->
+      <!--        <i class="material-icons prefix">search</i>-->
+      <!--        <input id="icon_prefix" placeholder="Portfolio" type="text" class="validate">-->
+      <!--        <label for="icon_prefix">Search Projects</label>-->
+      <!--      </div>-->
+      <div class="col s6">
+        <div class="chips chips-placeholder my-8"></div>
+      </div>
+      <div class="divider"></div>
+      <div class="col s6 hide-on-small-and-down">
+<!--        <button class="btn waves-effect waves-light m-15" (click)="shuffle()">Shuffle</button>-->
+        <pio-sort-button text="Name" (clicked)="sortBy('name', $event)"></pio-sort-button>
+        <pio-sort-button text="Date" classes="m-15" (clicked)="sortBy('date', $event)"></pio-sort-button>
+        <!--        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.sortBy('name')">Sort Name</button>-->
+        <!--        <button class="btn waves-effect waves-light m-15" (click)="projectsPageComponent.sortBy('date')">Sort Date</button>-->
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container mt-30">
   <div id="grid">
     <div class="grid-sizer"></div>
